--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -1,4 +1,5 @@
 @import url(../colors/light.css);
+@import url(../global/header.css);
 
 /* RESET CSS */
 * {
@@ -12,6 +13,10 @@ ul, ol, a, button {
 }
 
 /* Style Global */
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --fonte-tamanho: 1rem;
 }
@@ -23,4 +28,7 @@ body {
     font-size: var(--fonte-tamanho);
     color: var(--cor-do-texto-preto);
     background-color: var(--cor-do-background);
+    width: 100dvw;
+    height: 100dvh;
+    transition: all .25s ease-in-out;
 }
