--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -1,5 +1,6 @@
 @import url(../colors/light.css);
 @import url(../global/header.css);
+@import url(../global/main.css);
 
 /* RESET CSS */
 * {
@@ -28,7 +29,7 @@ body {
     font-size: var(--fonte-tamanho);
     color: var(--cor-do-texto-preto);
     background-color: var(--cor-do-background);
-    width: 100dvw;
+    width: 100%;
     height: 100dvh;
     transition: all .25s ease-in-out;
 }
