--- a/styles/products/products-section.css
+++ b/styles/products/products-section.css
@@ -1,7 +1,7 @@
 @import url(./card.css);
 
 .products__section {
-    height: 50dvh;
+    height: 70dvh;
 }
 
 section.products__section .products__title {
@@ -19,6 +19,8 @@ section.products__section .products__container {
     overflow-y: scroll;
     width: 100%;
     box-shadow: -12px 10px 5.8px rgba(0, 0, 0, .25);
+    border: 1px solid var(--cor-do-titulo);
+    border-radius: 8px;
 }
 
 section.products__section .products__container::-webkit-scrollbar {
@@ -30,6 +32,18 @@ section.products__section .products__container::-webkit-scrollbar-thumb {
     border-radius: 20px;
 }
 
-section.products__section .products__item {
-    min-height: 20dvh;
+section.products__section .products__container .products__item {}
+
+section.products__section .products__container .products__item__empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 19dvh;
+    font-size: 1rem;
+    font-family: "IBM Plex Mono", monospace;
+    font-weight: 500;
+    font-style: normal;
+    background-color: var(--cor-do-titulo);
+    border-radius: 8px;
 }
