--- a/styles/colors/light.css
+++ b/styles/colors/light.css
@@ -6,4 +6,6 @@
     --cor-do-texto-branco: #FFFFFF;
     --cor-do-texto-preto: #070606;
     --cor-do-titulo: #E5E5E5;
+    --cor-da-label: #8a8a8f;
+    --cor-de-erro: #ff6347;
 }
