Adicionado estilo ao footer

--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -1,6 +1,7 @@
 @import url(../colors/light.css);
 @import url(../global/header.css);
 @import url(../global/main.css);
+@import url(../global/footer.css);
 
 /* RESET CSS */
 * {
