--- a/styles/global/header.css
+++ b/styles/global/header.css
@@ -4,11 +4,13 @@ header {
     padding: 20px 0px;
     background-color: var(--cor-do-background-card);
     box-shadow: 0px 7px .9px rgba(0, 0, 0, .25);
+    width: 100%;
 }
 
 header > .logo {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 header > .logo img {
@@ -19,4 +21,24 @@ header > .logo .logo__titulo {
     font-size: 1.375rem;
     text-align: left;
     color: var(--cor-do-titulo);
+}
+
+/*Tablet*/
+@media screen and (max-width: 768px) {
+    header {
+        padding: 10px 0px;
+    }
+}
+
+/*Mobile*/
+@media screen and (max-width: 425px) {
+    header > .logo img {
+        width: 30%;
+    }
+
+    header > .logo .logo__titulo {
+        font-size: 1.25 rem;
+        text-align: left;
+        color: var(--cor-do-titulo);
+    }
 }
