--- a/styles/global/main.css
+++ b/styles/global/main.css
@@ -8,3 +8,21 @@ main {
     margin: 50px 30px;
     padding: 60px 40px; 
 }
+
+/*Tablet*/
+@media screen and (max-width: 768px) {
+    main {
+        grid-template-columns: 1fr;
+        gap: 58px;
+        margin: 0;
+        padding: 32px 16px 60px;
+    }
+}
+
+/*Mobile*/
+@media screen and (max-width: 425px) {
+    main {
+        gap: 40px;
+        padding: 30px 16px 56px;
+    }
+}
