--- a/styles/products/products-section.css
+++ b/styles/products/products-section.css
@@ -45,3 +45,50 @@ section.products__section .products__container .products__item__empty {
     background-color: var(--cor-do-titulo);
     border-radius: 8px;
 }
+
+/*Tablet*/
+@media screen and (max-width: 768px) {
+    .products__section {
+        height: auto;
+        overflow: hidden;
+        margin-top: 32px;
+        gap: 24px;
+    }
+    
+    section.products__section .products__title {
+        font-size: 1.25rem;
+    }
+    
+    section.products__section .products__container {
+        display: flex;
+        padding: 16px 0px;
+        gap: 10px;
+        overflow-x: scroll;
+        box-shadow: none;
+    }
+    
+    section.products__section .products__container .products__item__empty {
+        height: 20dvh;
+    }
+}
+
+/*Mobile*/
+@media screen and (max-width: 425px) {
+    .products__section {
+        gap: 32px;
+    }
+    
+    section.products__section .products__title {
+        font-size: 1.15rem;
+    }
+    
+    section.products__section .products__container {
+        gap: 16px;
+    }
+    
+    section.products__section .products__container .products__item__empty {
+        height: 15dvh;
+        font-size: 0.875rem;
+        font-weight: 700;
+    }
+}
