--- a/styles/products/card/card.css
+++ b/styles/products/card/card.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--cor-do-background-card);
-    border: 3px solid var(--cor-do-texto-preto);
+    background-color: var(--cor-do-background);
+    border: 1px solid var(--cor-do-titulo);
     border-radius: 10px;
     padding: 10px;
     gap: 10px;
@@ -12,10 +12,11 @@
 }
 
 .product__card > img {
-    border: 3px solid var(--cor-do-texto-preto);
+    border: 1px solid var(--cor-do-titulo);
+    background-color: var(--cor-do-titulo);
     border-radius: 10px;
     width: 100%;
-    height: 174px;
+    height: 250px;
     object-fit: contain;
 }
 
@@ -28,7 +29,7 @@
     font-family: "IBM Plex Mono", monospace;
     font-weight: 400;
     font-style: normal;
-    color: var(--cor-do-texto-branco);
+    color: var(--cor-do-texto-preto);
     margin-bottom: 10px;
 
 }
@@ -47,7 +48,53 @@
     text-align: left;
 }
 
-.product__card .product__card-container--info .product__card-container--value img {
-    width: 24px;
+.product__card .product__card-container--info .product__card-container--value svg {
+    width: 32px;
     height: 24px;
+    cursor: pointer;
+}
+
+.product__card .product__card-container--info .product__card-container--value svg path {
+    fill: var(--cor-primaria);
+    transition: all .25s ease-in-out;
+}
+
+.product__card .product__card-container--info .product__card-container--value svg:hover path {
+    fill: var(--cor-de-erro);
+}
+
+/*Tablet*/
+@media screen and (max-width: 768px) {
+    .product__card {
+        width: 40dvw;
+        border-radius: 16px;
+        padding: 16px;
+        gap: 16px;
+    }
+    
+    .product__card > img {
+        border-radius: 16px;
+        height: 200px;
+    }
+    
+    .product__card .product__card-container--info p {
+        font-size: 1rem;
+        margin-bottom: 8px;
+    }
+    
+    .product__card .product__card-container--info .product__card-container--value {
+        gap: 16px;
+    }
+}
+
+/*Mobile*/
+@media screen and (max-width: 425px) {
+    .product__card {
+        width: 65dvw;
+        padding: 12px;
+    }
+    
+    .product__card > img {
+        height: 180px;
+    }
 }
