--- a/styles/products/products-section.css
+++ b/styles/products/products-section.css
@@ -32,6 +32,7 @@ section.products__section .products__container::-webkit-scrollbar-thumb {
 }
 
 section.products__section .products__container .products__item {
+    display: flex;
     scroll-snap-align: center;
     flex-shrink: 0;
 }
